organized profile page a bit and fixed the default character color. Cleaned up some whitespace

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -643,3 +643,7 @@ article {
     padding: 25px;
     line-height: 1.3em;
 }
+/* default color on white pages */
+.labels {
+    color: black;
+}
